# coinmena_test_task

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/config/: settings.py
src/core/: api.py  interfaces.py  services.py  urls.py
src/core/domain/: exchange_rates.py
