[tool.poetry]
name = "coinmena_test_task"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
django = "^3.2.6"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"
httpx = "^0.20.0"
celery = "^5.1.2"
django_celery_beat = "^2.2.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
black = "21.7b0"
flake8 = "~3.8.4"
isort = "~5.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
